--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -74,4 +74,16 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+  --ion-font-family: 'Roboto';
+}
+
+ion-thumbnail {
+  margin-right: 1rem;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  src: url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
 }
